--- a/y2022/RapidReact/dashboard.html
+++ b/y2022/RapidReact/dashboard.html
@@ -74,7 +74,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(175.693deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(244.704deg);"
             pose="[0,0,0]"
         ></frc-field-robot>
         <frc-field-trajectory
@@ -88,6 +88,7 @@
     tab-name="Shooter"
     source-provider="NetworkTables"
     slot="tab"
+    selected=""
 >
     <frc-line-chart
         title="Line Chart"
@@ -132,12 +133,11 @@
     tab-name="Collector"
     source-provider="NetworkTables"
     slot="tab"
-    selected=""
 >
     <frc-line-chart
-        title="Line Chart"
+        title="Angle"
         source-provider="NetworkTables"
-        style="width: 1179px; height: 660px; transform: translate(0px, 0px);"
+        style="width: 764px; height: 370px; transform: translate(0px, 0px);"
     >
         <frc-chart-axis
             slot="axes"
@@ -164,6 +164,32 @@
             source-provider="NetworkTables"
             label="Angle Goal"
             source-key="/collectorSubsystem/angleGoal"
+        ></frc-chart-data>
+    </frc-line-chart>
+    <frc-line-chart
+        title="Velocity"
+        source-provider="NetworkTables"
+        style="transform: translate(28px, 410px);"
+    >
+        <frc-chart-axis
+            slot="axes"
+            source-provider="NetworkTables"
+            tick-values="[]"
+            min="-170"
+            max="170"
+        ></frc-chart-axis>
+        <frc-chart-data
+            slot="data"
+            label="Left Velocity"
+            color="#00aa00"
+            source-provider="NetworkTables"
+            source-key="/collectorSubsystem/leftIntakeDps"
+        ></frc-chart-data>
+        <frc-chart-data
+            slot="data"
+            source-provider="NetworkTables"
+            label="Right Velocity"
+            source-key="/collectorSubsystem/rightIntakeDps"
         ></frc-chart-data>
     </frc-line-chart>
 </dashboard-tab>
