Tested on bubbles

--- a/y2023/ChargedUp/ChargedUpDash.html
+++ b/y2023/ChargedUp/ChargedUpDash.html
@@ -15,63 +15,54 @@
         source-key="/Shuffleboard/AutomatedTurret/High Cone Left"
         style="transform: translate(11px, 17px); width: 226.922px; height: 115px;"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/AutomatedTurret/High Cube"
         style="transform: translate(235px, 18px); width: 217.359px; height: 111px;"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Right"
         style="transform: translate(453px, 24px); width: 236.875px; height: 108px;"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(8px, 128px); width: 232.812px; height: 123px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Left"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(233px, 127px); width: 226.25px; height: 122px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cube"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(452px, 132px); width: 246.781px; height: 118px;"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Right"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(7px, 249px); width: 230.453px; height: 106px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Left"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(233px, 248px); width: 222.891px; height: 112px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cube"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(451px, 248px); width: 247.422px; height: 107px;"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Right"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-sendable-chooser
         source-key="/SmartDashboard/Auto Mode Select"
@@ -99,35 +90,30 @@
         style="transform: translate(39px, 55px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, 0)"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(43px, 134px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, 90 deg)"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(49px, 201px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis set position: (0, 0, -90 deg)"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(46px, 267px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis: Tune Velocity"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis: Sync Odometry"
         style="transform: translate(49px, 332px);"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-field
         source-key="/SmartDashboard/Field"
@@ -144,7 +130,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(-89.3938deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90.011deg);"
             pose="[0,0,0]"
             opacity="100"
         ></frc-field-robot>
@@ -180,7 +166,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/OldOdometry"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(-89.3938deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(184.194deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -230,6 +216,7 @@
         style="transform: translate(51px, 393px);"
         source-key="/Shuffleboard/ChassisTestCommands/Chassis Auto Engage"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-line-chart
         title="Line Chart"
@@ -269,27 +256,25 @@
     tab-name="Arm Pivot"
     slot="tab"
     source-provider="NetworkTables"
+    selected=""
 >
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 0 degrees"
         style="transform: translate(24px, 18px);"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 45 degrees"
         style="transform: translate(22px, 67px);"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(23px, 132px);"
         source-key="/Shuffleboard/ArmPivotTestCommands/Arm Pivot: Angle PID - 90 degrees"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-line-chart
         title="Line Chart"
@@ -346,18 +331,21 @@
         style="transform: translate(23px, 257px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(22px, 308px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (0 deg)"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(25px, 360px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: to Coast Mode"
         name=""
+        label=""
     ></frc-robot-command>
 
 
@@ -367,8 +355,39 @@
         source-provider="NetworkTables"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (Abs Encoder Val)"
         style="transform: translate(26px, 419px);"
-        label=""
     ></frc-robot-command>
+    <vaadin-number-field
+        label="Arm Encoder"
+        value="0"
+        has-value=""
+        has-label=""
+        source-provider="NetworkTables"
+        style="transform: translate(56px, 533px);"
+        source-key="/Arm Subsystem/Arm Encoder (deg)"
+        placeholder=""
+        min="NaN"
+        max="NaN"
+    ><input
+            slot="input"
+            value="0"
+            type="number"
+            id="vaadin-number-field-25"
+            aria-labelledby="label-vaadin-number-field-25"
+            aria-describedby=""
+            min="undefined"
+            max="undefined"
+            step="any"
+        ><label
+            slot="label"
+            id="label-vaadin-number-field-25"
+            for="vaadin-number-field-25"
+        >Arm Encoder</label>
+        <div
+            slot="error-message"
+            id="error-message-vaadin-number-field-22"
+            hidden=""
+        ></div>
+    </vaadin-number-field>
 </dashboard-tab>
 <dashboard-tab
     tab-name="Pit"
@@ -381,6 +400,7 @@
         style="transform: translate(14px, 10px);"
         source-key="/SmartDashboard/Run checklist"
         name=""
+        label=""
     ></frc-robot-command>
 
     <frc-robot-command
@@ -388,14 +408,12 @@
         style="transform: translate(18px, 69px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: to Coast Mode"
         name=""
-        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(238px, 68px);"
         source-key="/Shuffleboard/PitCommands/Arm Pivot: Reset Encoder (Abs Encoder Val)"
         name=""
-        label=""
     ></frc-robot-command>
 
     <vaadin-number-field
@@ -408,11 +426,12 @@
         source-key="/Arm Subsystem/Absolute Encoder Entry"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-2"
+            id="vaadin-number-field-4"
             aria-labelledby="label-vaadin-number-field-111"
             aria-describedby=""
             min="NaN"
@@ -421,7 +440,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-111"
-            for="vaadin-number-field-2"
+            for="vaadin-number-field-4"
         >Absolute Encoder</label>
         <div
             slot="error-message"
@@ -439,11 +458,12 @@
         source-key="/Arm Subsystem/Arm Encoder (deg)"
         min="NaN"
         max="NaN"
+        placeholder=""
     ><input
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-3"
+            id="vaadin-number-field-5"
             aria-labelledby="label-vaadin-number-field-135"
             aria-describedby=""
             min="NaN"
@@ -452,7 +472,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-135"
-            for="vaadin-number-field-3"
+            for="vaadin-number-field-5"
         >Built In Encoder</label>
         <div
             slot="error-message"
@@ -471,54 +491,63 @@
         style="transform: translate(69px, 66px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Left"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(312px, 83px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cube"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(535px, 79px);"
         source-key="/Shuffleboard/AutomatedTurret/High Cone Right"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(70px, 214px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Left"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(323px, 224px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cube"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(549px, 214px);"
         source-key="/Shuffleboard/AutomatedTurret/Mid Cone Right"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(68px, 326px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Left"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(293px, 318px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cube"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(550px, 330px);"
         source-key="/Shuffleboard/AutomatedTurret/Low Cone Right"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-field
         source-key="/Shuffleboard/Debug/Field"
@@ -535,7 +564,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(-89.3938deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90.011deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -601,7 +630,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/Robot"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(-89.3938deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(90.011deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -624,7 +653,7 @@
         <frc-field-robot
             source-key="/SmartDashboard/Field/OldOdometry"
             source-provider="NetworkTables"
-            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(-89.3938deg);"
+            style="width: 0px; height: 0px; transform: translate(0px, 0px) rotate(184.194deg);"
             opacity="100"
             pose="[0,0,0]"
         ></frc-field-robot>
@@ -684,42 +713,49 @@
         style="transform: translate(62px, 70px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Full Retract"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(61px, 144px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Mid Retract"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(78px, 211px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Full Extend"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(328px, 64px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Bottom Extended"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(334px, 136px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Bottom Retracted"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(335px, 208px);"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Top Extended"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         source-key="/Shuffleboard/ArmExtensionTestCommands/Arm Piston: Top Retracted"
         style="transform: translate(357px, 287px);"
         name=""
+        label=""
     ></frc-robot-command>
 </dashboard-tab>
 <dashboard-tab
@@ -732,19 +768,20 @@
         source-key="/Shuffleboard/ClawTestCommands/Claw: In"
         style="transform: translate(129px, 162px);"
         name=""
+        label=""
     ></frc-robot-command>
     <frc-robot-command
         source-provider="NetworkTables"
         style="transform: translate(133px, 255px);"
         source-key="/Shuffleboard/ClawTestCommands/Claw: Out"
         name=""
+        label=""
     ></frc-robot-command>
 </dashboard-tab>
 <dashboard-tab
     tab-name="Chassis Angle"
     slot="tab"
     source-provider="NetworkTables"
-    selected=""
 >
     <frc-line-chart
         title="Line Chart"
